# dnipro

./: .env.example  .gitignore  Anchor.toml  CONTRIBUTING.md  Cargo.toml  README.md  package.json  tsconfig.json  vercel.json
.github/workflows/: ci.yml
cli/: package.json  tsconfig.json
cli/src/: index.ts
cli/src/commands/: deposit.ts  generate.ts  inspect.ts  list.ts  portfolio.ts  register.ts  withdraw.ts
docs/: adapter-spec.md  deployment.md  sdk.md
programs/adapters/drift/: Cargo.toml
programs/adapters/drift/src/: lib.rs
programs/adapters/jupiter/: Cargo.toml
programs/adapters/jupiter/src/: lib.rs
programs/adapters/kamino/: Cargo.toml
programs/adapters/kamino/src/: lib.rs
programs/adapters/maple/: Cargo.toml
programs/adapters/maple/src/: lib.rs
programs/adapters/marginfi/: Cargo.toml
programs/adapters/marginfi/src/: lib.rs
programs/dispatcher/: Cargo.toml
programs/dispatcher/src/: error.rs  events.rs  lib.rs  state.rs
programs/dispatcher/src/instructions/: current_value.rs  deposit.rs  initialize.rs  mod.rs  set_paused.rs  transfer_admin.rs  update_config.rs  withdraw.rs
programs/registry/: Cargo.toml
programs/registry/src/: error.rs  events.rs  lib.rs  state.rs
programs/registry/src/instructions/: deactivate_adapter.rs  governance.rs  initialize_registry.rs  mod.rs  reactivate_adapter.rs  register_adapter.rs  update_adapter.rs
scripts/: README.md  initialize.ts  register-adapter.ts  update-adapter.ts
sdk/: package.json  tsconfig.json
sdk/src/: index.ts
sdk/src/accounts/: index.ts
sdk/src/client/: index.ts
sdk/src/constants/: index.ts
sdk/src/instructions/: index.ts
sdk/src/types/: index.ts
sdk/src/utils/: index.ts
tests/integration/: dispatcher.test.ts
web/: next.config.js  package.json  tailwind.config.js  tsconfig.json
web/src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
web/src/app/adapters/: page.tsx
web/src/app/adapters/[id]/: AdapterDetailClient.tsx  page.tsx
web/src/app/architecture/: page.tsx
web/src/app/dashboard/: DashboardClient.tsx  page.tsx
web/src/app/docs/: page.tsx
web/src/app/docs/build-adapter/: page.tsx
web/src/app/docs/governance/: page.tsx
web/src/app/docs/sdk/: page.tsx
web/src/app/examples/: page.tsx
web/src/components/icons/: AdapterIcons.tsx
web/src/components/layout/: Footer.tsx  Navbar.tsx  Providers.tsx
web/src/components/sections/: AdaptersPreview.tsx  ArchitectureDiagram.tsx  CTASection.tsx  DeveloperSection.tsx  HeroSection.tsx  HowItWorks.tsx  StatsSection.tsx
web/src/components/visual/: RiverBackground.tsx
web/src/hooks/: useAdapters.ts  usePortfolio.ts  useTransaction.ts
web/src/lib/: mockData.ts  utils.ts
