[package]
name = "registry"
version = "0.1.0"
description = "Dnipro Universal Yield Adapter - Registry Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "registry"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { workspace = true }
