[package]
name = "drift-adapter"
version = "0.1.0"
description = "Dnipro Adapter — Drift Insurance Fund"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "drift_adapter"

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { workspace = true }
anchor-spl  = { workspace = true }
