[package]
name = "kamino-adapter"
version = "0.1.0"
description = "Dnipro Adapter — Kamino USDC Lending"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "kamino_adapter"

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { workspace = true }
anchor-spl  = { workspace = true }
