[package]
name = "maple-adapter"
version = "0.1.0"
description = "Dnipro Adapter — Maple Syrup RWA"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "maple_adapter"

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { workspace = true }
anchor-spl  = { workspace = true }
