[package]
name = "marginfi-adapter"
version = "0.1.0"
description = "Dnipro Adapter — MarginFi USDC"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "marginfi_adapter"

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { workspace = true }
anchor-spl  = { workspace = true }
